<resources>
    <string name="app_name">Xiinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_label">Card Label</string>
    <string name="profile">Profile</string>
    <string name="cards">Cards</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="contacts">Contacts</string>
    <string name="image">image</string>
    <string name="Title">Title</string>
</resources>