<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cardDetailsFragment"
            type="com.example.xiinder.fragment.CardDetailsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CardDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/CardImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    android:src="@drawable/mobile_01"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:autoSizeTextType="uniform"
                android:background="@color/dark_grey"
                android:gravity="center"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/CardInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:autoSizeTextType="uniform"
                android:background="@color/dark_grey"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"
                android:background="@color/dark_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/Contacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/contacts"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>