<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:orientation="vertical"
        tools:context=".fragment.ProfileFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/UserPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/mobile_01"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:autoSizeTextType="uniform"
            android:background="@color/dark_grey"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/UserInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/CardsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cards"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>