<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="cardFragment"
            type="com.example.xiinder.fragment.CardsFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutForImage"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image"
                    android:src="@drawable/mobile_01" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutForText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/linearLayoutForImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:gravity="center_horizontal|top|center_vertical"
                    android:text="@string/card_label"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center_horizontal|bottom|center_vertical"
                    android:text="@string/profile"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>